<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPs4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClickSetPS4Games"
        android:text="@string/ps4_games"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewImages"
        app:layout_constraintEnd_toStartOf="@+id/textViewNS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textViewNS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClickSetNSGames"
        android:text="@string/nintendo_switch_games"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewImages"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewXOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClickSetXOneGames"
        android:text="@string/xone_games"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewImages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewNS"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        tools:ignore="MissingConstraints" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewImages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNS"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBarLoading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewXOne"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="36dp"
        android:layout_height="0dp"
        android:layout_marginEnd="36dp"
        android:onClick="showPopup"
        app:layout_constraintBottom_toTopOf="@id/textViewXOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageViewLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/newmenubutton" />


</androidx.constraintlayout.widget.ConstraintLayout>